@@ -50,6 +50,13 @@
   "block.dwm.red_roundel": "Red Roundel",
   "block.dwm.black_roundel": "Black Roundel",
 
+  "block.dwm.oak_roundel": "Oak Roundel",
+  "block.dwm.spruce_roundel": "Spruce Roundel",
+  "block.dwm.birch_roundel": "Birch Roundel",
+  "block.dwm.jungle_roundel": "Jungle Roundel",
+  "block.dwm.acacia_roundel": "Acacia Roundel",
+  "block.dwm.dark_oak_roundel": "Dark Oak Roundel",
+
   "block.dwm.hartnell_roundel": "Hartnell Roundel",
   "block.dwm.hartnell_roundel_split": "Hartnell Roundel",
 
