@@ -1,0 +1,7 @@
+{
+	"credit": "Made with Blockbench",
+	"parent": "dwm:block/roundel/red_roundel",
+	"textures": {
+		"border": "block/oak_planks"
+	}
+}
