@@ -1,6 +1,6 @@
 {
 	"parent": "dwm:block/roundel_lamp/sea_roundel_oak",
 	"textures": {
-		"border": "block/acacia_planks"
+		"border": "block/dark_oak_planks"
 	}
 }
