@@ -1,0 +1,3 @@
+{
+  "parent": "dwm:block/roundel/dark_oak_roundel"
+}
