@@ -1,0 +1,3 @@
+{
+  "parent": "dwm:block/roundel/jungle_roundel"
+}
