@@ -1,3 +1,3 @@
 {
-	"parent": "dwm:block/roundel/black_roundel"
+	"parent": "dwm:block/roundel/red_roundel"
 }
